public/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

html {
  overflow: auto;
}

html, body {
  width: 100%;
  height: 100%;
  
}
body {
  font-family: Arial, sans-serif;
  background-color: #121212;
  color: #e0e0e0;
}

header {
  background-color: #1f1f1f;
  color: #e0e0e0;
  padding: 1rem 0;
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
}

nav ul li {
  margin: 0 1rem;
}

nav ul li a {
  color: #e0e0e0;
  text-decoration: none;
  font-weight: bold;
}

main {
  padding: 2rem;
  max-width: 1200px;
  margin: 0 auto;
}

section {
  margin-bottom: 2rem;
}

#spinner-div {
  background-color: rgba(255,255,255,0.15);
  position: absolute;

  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  opacity: 0.7;
  z-index: 99;
}

#spinner-img {
  opacity: 1;
  z-index: 100;
}

button {
  appearance: button;
  background-color: transparent;
  background-image: linear-gradient(to bottom, #fff, #f8eedb);
  border: 0 solid #e5e7eb;
  border-radius: 0.5rem;
  box-sizing: border-box;
  color: #482307;
  column-gap: 1rem;
  cursor: pointer;
  display: flex;
  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 100%;
  font-weight: 700;
  line-height: 24px;
  margin: 0;
  outline: 2px solid transparent;
  padding: 1rem 1.5rem;
  text-align: center;
  text-transform: none;
  transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  box-shadow: -6px 8px 10px rgba(81, 41, 10, 0.1),
    0px 2px 2px rgba(81, 41, 10, 0.2);
}

button:active {
  background-color: #f3f4f6;
  box-shadow: -1px 2px 5px rgba(81, 41, 10, 0.15),
    0px 1px 1px rgba(81, 41, 10, 0.15);
  transform: translateY(0.125rem);
}

button:focus {
  box-shadow: rgba(72, 35, 7, 0.46) 0 0 0 4px,
    -6px 8px 10px rgba(81, 41, 10, 0.1), 0px 2px 2px rgba(81, 41, 10, 0.2);
}

#item-action-buy {
  -webkit-transform: scale(1.5);
  transform: scale(2.5);
  margin-right: 14px;
  margin-left: 14px;
  margin-top: 10px;
}

#item-action-sell {
  -webkit-transform: scale(1.5);
  transform: scale(2.5);
  margin-left: 30px;
  margin-right: 14px;
  margin-top: 10px;
}

h1 {
  margin-bottom: 1rem;
  font-size: 2rem;
  color: #e0e0e0;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 2rem;
}

table,
th,
td {
  border: 1px solid #333;
}

th,
td {
  padding: 0.5rem;
  text-align: left;
}

th {
  background-color: #1f1f1f;
}

form {
  display: flex;
  flex-direction: column;
}

form label {
  margin-bottom: 0.5rem;
  font-weight: bold;
}

form input {
  margin-bottom: 1rem;
  padding: 0.5rem;
  font-size: 1rem;
  border: 1px solid #333;
  border-radius: 4px;
  background-color: #333;
  color: #e0e0e0;
}

form button {
  padding: 0.75rem;
  font-size: 1rem;
  color: #e0e0e0;
  background-color: #1f1f1f;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

form button:hover {
  background-color: #333;
}

footer {
  text-align: center;
  padding: 1rem 0;
  background-color: #1f1f1f;
  color: #e0e0e0;
  position: fixed;
  width: 100%;
  bottom: 0;
}

